# json-differ

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: delta.rs  differ.rs  differ_test.rs  errors.rs  lib.rs  lib_test.rs  patcher.rs  patcher_test.rs  structs.rs  utils.rs
src/testdata/: small_json_1.json  small_json_2.json
