[package]
name = "json-differ"
version = "0.1.0"
edition = "2021"
authors = ["Amin Jamal <aminjamal10@gmail.com>"]
description = "A simple tool to compare two json objects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_json = "^1.0.103"
serde_json_path = "^0.6.2"
sha2 = "^0.10"
